name:                maryodel
version:             0.1.0.0
synopsis:            A pure-Haskell model of Dr. Mario, NES edition
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           2017, Daniel Wagner
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Dr.Mario.Model,
                       Dr.Mario.Model.Internal,
                       Dr.Mario.Protocol.Client,
                       Dr.Mario.Protocol.Raw,
                       Dr.Mario.Util
  other-extensions:    BinaryLiterals,
                       DeriveFunctor,
                       FlexibleInstances,
                       TypeFamilies,
                       MultiParamTypeClasses,
                       ScopedTypeVariables,
                       TypeFamilies,
                       ViewPatterns
  build-depends:       ansi-terminal >=0.7 && <0.12,
                       attoparsec >=0.13 && <0.14,
                       base >=4.10 && <4.13,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.6,
                       data-default >=0.7 && <0.8,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       hashable >=1.2 && <1.4,
                       mtl >=2.2 && <2.3,
                       primitive >=0.7 && <0.8,
                       process >=1.6.3 && <1.7,
                       stm >=2.4 && <2.6,
                       transformers >=0.5.6 && <0.6,
                       unix >=2.7 && <2.8,
                       vector >=0.12 && <0.13
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs -funbox-strict-fields
  -- this hs-source-dirs is not needed for cabal, but makes cabtags' job easier
  hs-source-dirs:      .

executable maryodel-debugging-client
  build-depends:       base >=4.10 && <4.13,
                       brick >=0.58 && <0.59,
                       containers >=0.5 && <0.6,
                       maryodel,
                       process >=1.6 && <1.7,
                       vty >=5.32 && <5.33
  default-language:    Haskell2010
  hs-source-dirs:      bin
  main-is:             maryodel-debugging-client.hs
  ghc-options:         -fno-warn-tabs -threaded
