name:                maryodel
version:             0.1.0.0
synopsis:            A pure-Haskell model of Dr. Mario, NES edition
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           2017-2022 Daniel Wagner
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Dr.Mario.Model,
                       Dr.Mario.Model.Internal,
                       Dr.Mario.Pathfinding,
                       Dr.Mario.Protocol.Client,
                       Dr.Mario.Protocol.Raw,
                       Dr.Mario.Util
  other-extensions:    BinaryLiterals,
                       DeriveFunctor,
                       DeriveGeneric,
                       FlexibleInstances,
                       TypeFamilies,
                       LambdaCase,
                       MultiParamTypeClasses,
                       PatternSynonyms,
                       ScopedTypeVariables,
                       TypeFamilies,
                       ViewPatterns
  build-depends:       aeson >=0.11 && <2.2,
                       ansi-terminal >=0.7 && <0.12,
                       attoparsec >=0.13 && <0.15,
                       base >=4.10 && <4.15,
                       bytestring >=0.10 && <0.11,
                       containers >=0.5 && <0.7,
                       data-default >=0.7 && <0.8,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       hashable >=1.2 && <1.5,
                       monad-loops >=0.4 && <0.5,
                       mtl >=2.2 && <2.4,
                       primitive >=0.7 && <0.8,
                       process >=1.6.3 && <1.7,
                       stm >=2.4 && <2.6,
                       transformers >=0.5.6 && <0.7,
                       unix >=2.7 && <2.8,
                       unordered-containers >=0.2 && <0.3,
                       vector >=0.12 && <0.14
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs -funbox-strict-fields -O2
  -- this hs-source-dirs is not needed for cabal, but makes cabtags' job easier
  hs-source-dirs:      .
